--- a/Style.css
+++ b/Style.css
@@ -1,26 +1,80 @@
-{
-    margin: 0;
-    padding: 0:
-
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    background:#777;
+    content: #ebebeb
 }
-
-div#container{
-
-}
-
 header{
-    background-color: white;
-    height: 40px;
-
+    color:#777;
+    background: white;
+    width: 960px;
+    margin: auto;
+    height: 100px;
+    text-align: center
 }
 
-main {
-
-
+section{
+    color:#777;
+    background: white;
+    width: 495px;
+    margin-left: 6.15cm;
+    height: 300px;
+    text-align: center
 }
 
-footer {
-    background-color: white;
-    height: 40px;
 
+nav{
+    color:#777;
+    background: white;
+    width: 960px;
+    margin: auto;
+    height: 100px;
+    text-align: center
+}
+
+aside{
+    background: white;
+    color:#777;
+    width: 443px;
+    margin-left: 13.69cm;
+    margin-top: 75px;
+    height: 300px;
+    text-align: center;
+}
+article{
+    color:white;
+    background: #777;
+    width: 460px;
+    margin: auto;
+    height: 220px;
+    text-align: center;
+}
+
+h4{
+    background: white;
+    color:#777;
+    width: 400px;
+    margin: auto;
+    height: 65px;
+    text-align: center;
+    margin-top: 0.4cm;
+}
+
+p{
+    background: white;
+    color:#777;
+    width: 400px;
+    margin: auto;
+    height: 65px;
+    text-align: center;
+    margin-top: 0.4cm;
+}
+
+footer{
+    color:#777;
+    background: white;
+    width: 960px;
+    margin: auto;
+    height: 100px;
+    text-align: center
 }
